examples/test/testpolicy847.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy847
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key36: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value0
      podSelector:
        matchLabels:
          key19: value32
          key8: value14
          key30: value5
